--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ github:
 json:
   name: Calnix
   description: data potato
-  current status: employed
+  status: employed
 
   message: 	
       - Greetings!
